# Annotile

./: README.md  justfile  mkdocs.yml  pyproject.toml
docs/: index.md
