[tool.poetry]
name = "annotile"
version = "0.1.0"
description = "Tile and restitch images and labels for computer vision models."
authors = ["Adharsh Kandula <adharsh.kandula@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AdharshKan42/Annotile"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
pillow = "^10.4.0"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.33"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.3"
pydoclint = "^0.5.6"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydoclint]
style = 'google'
